--- a/inventory/templates/inventory/medicine_form.html
+++ b/inventory/templates/inventory/medicine_form.html
@@ -19,70 +19,25 @@
                 <!-- Left Column -->
                 <div class="col-md-6 mb-3">
                     <h4>Core Information</h4>
-                    <div class="mb-3">
-                        <label for="{{ form.name.id_for_label }}" class="form-label">{{ form.name.label }}</label>
-                        {{ form.name }}
-                    </div>
-                    <div class="mb-3">
-                        <label for="{{ form.description.id_for_label }}" class="form-label">{{ form.description.label }}</label>
-                        {{ form.description }}
-                    </div>
-                    <div class="mb-3">
-                        <label for="{{ form.brand_name.id_for_label }}" class="form-label">{{ form.brand_name.label }}</label>
-                        {{ form.brand_name }}
-                    </div>
-                    <div class="mb-3">
-                        <label for="{{ form.category.id_for_label }}" class="form-label">{{ form.category.label }}</label>
-                        {{ form.category }}
-                    </div>
-                    <div class="mb-3">
-                        <label for="{{ form.dosage_form.id_for_label }}" class="form-label">{{ form.dosage_form.label }}</label>
-                        {{ form.dosage_form }}
-                    </div>
-
-                    <h4 class="mt-4">Supplier & Storage</h4>
-                    <div class="mb-3">
-                        <label for="{{ form.supplier_name.id_for_label }}" class="form-label">{{ form.supplier_name.label }}</label>
-                        {{ form.supplier_name }}
-                    </div>
-                    <div class="mb-3">
-                        <label for="{{ form.storage_info.id_for_label }}" class="form-label">{{ form.storage_info.label }}</label>
-                        {{ form.storage_info }}
-                    </div>
-                    <div class="mb-3">
-                        <label for="{{ form.location.id_for_label }}" class="form-label">{{ form.location.label }}</label>
-                        {{ form.location }}
-                    </div>
+                    <div class="mb-3">{{ form.code.label_tag }} {{ form.code }}</div>
+                    <div class="mb-3">{{ form.name.label_tag }} {{ form.name }}</div>
+                    <div class="mb-3">{{ form.brand_name.label_tag }} {{ form.brand_name }}</div>
+                    
+                    <h4 class="mt-4">Categorization</h4>
+                    <div class="mb-3">{{ form.category.label_tag }} {{ form.category }}</div>
+                    <div class="mb-3">{{ form.unit_per_package.label_tag }} {{ form.unit_per_package }}</div>
+                    <div class="mb-3">{{ form.package_type.label_tag }} {{ form.package_type }}</div>
                 </div>
                 <!-- Right Column -->
                 <div class="col-md-6 mb-3">
-                    <h4>Pricing & Stock</h4>
-                     <div class="mb-3">
-                        <label for="{{ form.purchase_price.id_for_label }}" class="form-label">{{ form.purchase_price.label }}</label>
-                        {{ form.purchase_price }}
-                    </div>
-                     <div class="mb-3">
-                        <label for="{{ form.selling_price.id_for_label }}" class="form-label">{{ form.selling_price.label }}</label>
-                        {{ form.selling_price }}
-                    </div>
-                     <div class="mb-3">
-                        <label for="{{ form.quantity.id_for_label }}" class="form-label">{{ form.quantity.label }}</label>
-                        {{ form.quantity }}
-                    </div>
-                     <div class="mb-3">
-                        <label for="{{ form.batch_number.id_for_label }}" class="form-label">{{ form.batch_number.label }}</label>
-                        {{ form.batch_number }}
-                    </div>
+                    <h4>Stock & Pricing</h4>
+                    <div class="mb-3">{{ form.quantity.label_tag }} {{ form.quantity }}</div>
+                    <div class="mb-3">{{ form.purchase_price.label_tag }} {{ form.purchase_price }}</div>
+                    <div class="mb-3">{{ form.selling_price.label_tag }} {{ form.selling_price }}</div>
 
                     <h4 class="mt-4">Dates</h4>
-                     <div class="mb-3">
-                        <label for="{{ form.purchase_date.id_for_label }}" class="form-label">{{ form.purchase_date.label }}</label>
-                        {{ form.purchase_date }}
-                    </div>
-                     <div class="mb-3">
-                        <label for="{{ form.expiry_date.id_for_label }}" class="form-label">{{ form.expiry_date.label }}</label>
-                        {{ form.expiry_date }}
-                    </div>
+                    <div class="mb-3">{{ form.purchase_date.label_tag }} {{ form.purchase_date }}</div>
+                    <div class="mb-3">{{ form.expiry_date.label_tag }} {{ form.expiry_date }}</div>
                 </div>
             </div>
             <hr>
